<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/usb_dialog_bg">
        <TextView
            android:layout_margin="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="16sp"
            android:text="@string/usb_toast_hint"/>

    <LinearLayout
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_margin="6dp"
            android:id="@+id/bt_open_usb"
            android:focusable="true"
            android:background="@drawable/btn_usb_window_selector"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="62dp"
            android:layout_height="64dp">
            <ImageView
                android:id="@+id/tv_icon_usb"
                android:layout_marginBottom="4dp"
                android:src="@mipmap/main_usb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="12sp"
                android:id="@+id/tv_text_sub"
                android:textColor="#fff"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usb_toast_open_usb"/>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="6dp"
            android:id="@+id/bt_open_video"
            android:focusable="true"
            android:background="@drawable/btn_usb_window_selector"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="62dp"
            android:layout_height="64dp">
            <ImageView
                android:id="@+id/tv_icon_video"
                android:layout_marginBottom="4dp"
                android:src="@mipmap/main_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="12sp"
                android:id="@+id/tv_text_video"
                android:textColor="#fff"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usb_toast_open_video"/>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="6dp"
            android:id="@+id/bt_open_music"
            android:focusable="true"
            android:background="@drawable/btn_usb_window_selector"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="62dp"
            android:layout_height="64dp">
            <ImageView
                android:id="@+id/tv_icon_music"
                android:layout_marginBottom="4dp"
                android:src="@mipmap/main_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="12sp"
                android:id="@+id/tv_text_music"
                android:textColor="#fff"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usb_toast_open_music"/>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="6dp"
            android:id="@+id/bt_open_picture"
            android:focusable="true"
            android:background="@drawable/btn_usb_window_selector"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="62dp"
            android:layout_height="64dp">
            <ImageView
                android:id="@+id/tv_icon_picture"
                android:layout_marginBottom="4dp"
                android:src="@mipmap/main_picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="12sp"
                android:id="@+id/tv_text_picture"
                android:textColor="#fff"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usb_toast_open_picture"/>
        </LinearLayout>
		<LinearLayout
            android:layout_margin="6dp"
            android:id="@+id/bt_file"
            android:focusable="true"
            android:background="@drawable/btn_usb_window_selector"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="62dp"
            android:layout_height="64dp">
            <ImageView
                android:id="@+id/tv_icon_file"
                android:layout_marginBottom="4dp"
                android:src="@mipmap/main_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="12sp"
                android:id="@+id/tv_text_file"
                android:textColor="#fff"
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usb_toast_open_document"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
